2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/13_While.deca
// Description:
//    Programme  while dont la condition est un boolean  .
//
// Resultats:
//      programme correcte 
//
// Historique:
//    cree le 09/01/2024
{
    while(true)
    {
        println("hello, je suis toujours dans while");
    }
}